[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/Imgs/floating_islands/island1.png" type="Texture" id=1]
[ext_resource path="res://Nodes/NormalIsland/NormalIsland.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 208 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 208 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 208 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 208 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 208 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 208 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 208 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 208 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 128, 208 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 128, 208 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "light",
"speed": 15.0
} ]

[sub_resource type="Animation" id=12]
resource_name = "float"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 73.5602, -0.25, 0, 0.25, 0, 69.0216, -0.25, 0, 0.25, 0, 73.4976, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="NormalIsland" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 73.5602 )
frames = SubResource( 11 )
animation = "light"
frame = 7
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 12 )

[node name="Area" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area"]
polygon = PoolVector2Array( 0, -32, 64, 0, 0, 32, -64, 0 )

[node name="IslandInfos" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="IslandInfos"]
margin_right = 126.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="IslandInfos/HBoxContainer"]
margin_right = 77.0
margin_bottom = 14.0
text = "Island Type:"

[node name="Label2" type="Label" parent="IslandInfos/HBoxContainer"]
margin_left = 81.0
margin_right = 126.0
margin_bottom = 14.0
text = "normal"
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
